k8s/wallabag/resources/valkey.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-deployment
  labels: &labels
    app.kubernetes.io/component: valkey
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:7.2@sha256:9f76860d751b89809ac46e0f74b367540abc1ec47e028399be62fa2f45b3a9dc
          resources:
            limits:
              memory: 1G
          ports:
            - name: valkey
              containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
spec:
  selector:
    app.kubernetes.io/component: valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
